--- a/cfg/Custom_Clash.ini
+++ b/cfg/Custom_Clash.ini
@@ -10,8 +10,8 @@ ruleset=🎯 全球直连,[]GEOIP,private,no-resolve
 ruleset=🎯 全球直连,clash-domain:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Direct_Domain.yaml,28800
 ruleset=🎯 全球直连,clash-classic:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Direct_Classical_IP.yaml,28800
 ;本项目收录的代理规则
-ruleset=🚀 手动选择,clash-domain:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Proxy_Domain.yaml,28800
-ruleset=🚀 手动选择,clash-classic:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Proxy_Classical_IP.yaml,28800
+ruleset=🌐 手动选择,clash-domain:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Proxy_Domain.yaml,28800
+ruleset=🌐 手动选择,clash-classic:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Proxy_Classical_IP.yaml,28800
 ;谷歌在国内可用的域名直连
 ruleset=🎯 全球直连,[]GEOSITE,google-cn
 ;国内游戏域名直连
@@ -23,7 +23,7 @@ ruleset=🎯 全球直连,[]GEOSITE,category-game-platforms-download
 ;BT Tracker 相关域名直连
 ruleset=🎯 全球直连,[]GEOSITE,category-public-tracker
 ;即时通讯包括了 Telegram/WhatsApp/Line 等海外主流即时通讯软件域名
-ruleset=💬 即时通讯,[]GEOSITE,category-communication
+ruleset=🚀 默认代理,[]GEOSITE,category-communication
 ;社交媒体包括了 Twitter(X)/Facebook/Instagram 等海外主流社交媒体
 ruleset=🌐 社交媒体,[]GEOSITE,category-social-media-!cn
 ruleset=🤖 ChatGPT,[]GEOSITE,openai
@@ -48,11 +48,11 @@ ruleset=🎥 PrimeVideo,[]GEOSITE,primevideo
 ruleset=🎥 Emby,[]GEOSITE,category-emby
 ruleset=🎻 Spotify,[]GEOSITE,spotify
 ruleset=📺 Bahamut,[]GEOSITE,bahamut
-ruleset=🎮 游戏平台,[]GEOSITE,category-games
+ruleset=🎯 全球直连,[]GEOSITE,category-games
 ruleset=🌎 国外媒体,[]GEOSITE,category-entertainment
 ruleset=🛒 国外电商,[]GEOSITE,category-ecommerce
-ruleset=🚀 手动选择,[]GEOSITE,gfw
-ruleset=💬 即时通讯,[]GEOIP,telegram,no-resolve
+ruleset=🌐 手动选择,[]GEOSITE,gfw
+ruleset=🚀 默认代理,[]GEOIP,telegram,no-resolve
 ruleset=🌐 社交媒体,[]GEOIP,twitter,no-resolve
 ruleset=🌐 社交媒体,[]GEOIP,facebook,no-resolve
 ruleset=🇬 谷歌服务,[]GEOIP,google,no-resolve
@@ -71,50 +71,42 @@ ruleset=🐟 漏网之鱼,[]FINAL
 
 ;设置节点分组标志位
 ;节点地区分组参考本项目推荐机场而设立
-custom_proxy_group=🚀 手动选择`select`^((?!(套餐|剩余)).)*$
-custom_proxy_group=♻️ 自动选择`url-test`.*`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=💬 即时通讯`select`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇼🇸 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🌐 其他地区`[]🚀 手动选择
-custom_proxy_group=🌐 社交媒体`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇼🇸 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🌐 其他地区`[]🚀 手动选择`[]♻️ 自动选择
-custom_proxy_group=🚀 GitHub`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇼🇸 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🌐 其他地区`[]🚀 手动选择`[]♻️ 自动选择`[]🎯 全球直连
-custom_proxy_group=🤖 ChatGPT`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇼🇸 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🌐 其他地区`[]🚀 手动选择`[]♻️ 自动选择
-custom_proxy_group=🤖 Copilot`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇼🇸 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🌐 其他地区`[]🚀 手动选择`[]♻️ 自动选择`[]🎯 全球直连
-custom_proxy_group=🤖 AI服务`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇼🇸 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🌐 其他地区`[]🚀 手动选择`[]♻️ 自动选择
-custom_proxy_group=🎶 TikTok`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇼🇸 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🌐 其他地区`[]🚀 手动选择`[]♻️ 自动选择`[]🎯 全球直连
-custom_proxy_group=📹 YouTube`select`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇼🇸 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🌐 其他地区`[]🚀 手动选择`[]♻️ 自动选择
-custom_proxy_group=🎥 Netflix`select`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇼🇸 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🌐 其他地区`[]🚀 手动选择`[]♻️ 自动选择
-custom_proxy_group=🎥 DisneyPlus`select`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇼🇸 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🌐 其他地区`[]🚀 手动选择`[]♻️ 自动选择
-custom_proxy_group=🎥 HBO`select`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇼🇸 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🌐 其他地区`[]🚀 手动选择`[]♻️ 自动选择`[]🎯 全球直连
-custom_proxy_group=🎥 PrimeVideo`select`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇼🇸 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🌐 其他地区`[]🚀 手动选择`[]♻️ 自动选择`[]🎯 全球直连
-custom_proxy_group=🎥 AppleTV+`select`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇼🇸 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🌐 其他地区`[]🚀 手动选择`[]♻️ 自动选择`[]🎯 全球直连
-custom_proxy_group=🎥 Emby`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇼🇸 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🌐 其他地区`[]🚀 手动选择`[]♻️ 自动选择`[]🎯 全球直连
-custom_proxy_group=🎻 Spotify`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇼🇸 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🌐 其他地区`[]🚀 手动选择`[]♻️ 自动选择`[]🎯 全球直连
-custom_proxy_group=📺 Bahamut`select`[]🇼🇸 台湾节点`[]🚀 手动选择`[]🎯 全球直连
-custom_proxy_group=🌎 国外媒体`select`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇼🇸 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🌐 其他地区`[]🚀 手动选择`[]♻️ 自动选择`[]🎯 全球直连
-custom_proxy_group=🛒 国外电商`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇼🇸 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🌐 其他地区`[]🚀 手动选择`[]♻️ 自动选择`[]🎯 全球直连
-custom_proxy_group=📢 谷歌FCM`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇼🇸 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🌐 其他地区`[]🚀 手动选择`[]♻️ 自动选择`[]🎯 全球直连
-custom_proxy_group=🇬 谷歌服务`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇼🇸 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🌐 其他地区`[]🚀 手动选择`[]♻️ 自动选择`[]🎯 全球直连
-custom_proxy_group=🍎 苹果服务`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇼🇸 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🌐 其他地区`[]🚀 手动选择`[]♻️ 自动选择
-custom_proxy_group=Ⓜ️ 微软服务`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇼🇸 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🌐 其他地区`[]🚀 手动选择`[]♻️ 自动选择
-custom_proxy_group=🎮 游戏平台`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇼🇸 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🌐 其他地区`[]🚀 手动选择`[]♻️ 自动选择
-custom_proxy_group=🎮 Steam`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇼🇸 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🌐 其他地区`[]🚀 手动选择`[]♻️ 自动选择
-custom_proxy_group=🚀 测速工具`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇼🇸 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🌐 其他地区`[]🚀 手动选择`[]♻️ 自动选择
-custom_proxy_group=🐟 漏网之鱼`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇼🇸 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🌐 其他地区`[]🚀 手动选择`[]♻️ 自动选择`[]🎯 全球直连
-custom_proxy_group=🔀 非标端口`select`[]🐟 遵循规则`[]🎯 全球直连
-custom_proxy_group=🇭🇰 香港节点`url-test`(港|HK|hk|Hong Kong|HongKong|hongkong|深港)`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇺🇸 美国节点`url-test`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States|UnitedStates)`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇯🇵 日本节点`url-test`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|(?<!尼|-)日|JP|Japan|🇯🇵)`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇸🇬 新加坡节点`url-test`(新加坡|坡|狮城|SG|Singapore)`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇼🇸 台湾节点`url-test`(台|新北|彰化|TW|Taiwan)`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇰🇷 韩国节点`url-test`(KR|Korea|KOR|首尔|韩|韓)`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇨🇦 加拿大节点`url-test`(加拿大|Canada|渥太华|温哥华|卡尔加里)`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇬🇧 英国节点`url-test`(英国|Britain|United Kingdom|England|伦敦)`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇫🇷 法国节点`url-test`(法国|France|巴黎)`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇩🇪 德国节点`url-test`(德国|Germany|柏林|法兰克福)`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇳🇱 荷兰节点`url-test`(荷兰|Netherlands|阿姆斯特丹)`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇹🇷 土耳其节点`url-test`(土耳其|Turkey|Türkiye)`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🌐 其他地区`url-test`(^(?!.*(港|HK|hk|Hong Kong|HongKong|hongkong|深港|美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States|UnitedStates|日本|川日|东京|大阪|泉日|埼玉|沪日|深日|(?<!尼|-)日|JP|Japan|🇯🇵|新加坡|坡|狮城|SG|Singapore|台|新北|彰化|TW|Taiwan|KR|Korea|KOR|首尔|韩|韓|加拿大|Canada|渥太华|温哥华|卡尔加里|英国|Britain|United Kingdom|England|伦敦|法国|France|巴黎|德国|Germany|柏林|法兰克福|荷兰|Netherlands|阿姆斯特丹|土耳其|Turkey|Türkiye)).*)`https://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🚀 默认代理`select`[]🇭🇰 香港自动`[]🇺🇸 美国自动`[]🇯🇵 日本自动`[]🇸🇬 新加坡自动`[]🇼🇸 台湾自动`[]🇰🇷 韩国自动`[]🇬🇧 英国自动`[]🌐 手动选择`[]♻️ 自动选择`[]🎯 全球直连
+custom_proxy_group=🌐 社交媒体`select`[]🇭🇰 香港自动`[]🇺🇸 美国自动`[]🇯🇵 日本自动`[]🇸🇬 新加坡自动`[]🇼🇸 台湾自动`[]🇰🇷 韩国自动`[]🇬🇧 英国自动`[]🌐 手动选择`[]♻️ 自动选择
+custom_proxy_group=🚀 GitHub`select`[]🇭🇰 香港自动`[]🇺🇸 美国自动`[]🇯🇵 日本自动`[]🇸🇬 新加坡自动`[]🇼🇸 台湾自动`[]🇰🇷 韩国自动`[]🇬🇧 英国自动`[]🌐 手动选择`[]♻️ 自动选择`[]🎯 全球直连
+custom_proxy_group=🤖 ChatGPT`select`[]🇭🇰 香港自动`[]🇺🇸 美国自动`[]🇯🇵 日本自动`[]🇸🇬 新加坡自动`[]🇼🇸 台湾自动`[]🇰🇷 韩国自动`[]🇬🇧 英国自动`[]🌐 手动选择`[]♻️ 自动选择
+custom_proxy_group=🤖 Copilot`select`[]🇭🇰 香港自动`[]🇺🇸 美国自动`[]🇯🇵 日本自动`[]🇸🇬 新加坡自动`[]🇼🇸 台湾自动`[]🇰🇷 韩国自动`[]🇬🇧 英国自动`[]🌐 手动选择`[]♻️ 自动选择`[]🎯 全球直连
+custom_proxy_group=🤖 AI服务`select`[]🇭🇰 香港自动`[]🇺🇸 美国自动`[]🇯🇵 日本自动`[]🇸🇬 新加坡自动`[]🇼🇸 台湾自动`[]🇰🇷 韩国自动`[]🇬🇧 英国自动`[]🌐 手动选择`[]♻️ 自动选择
+custom_proxy_group=🎶 TikTok`select`[]🇭🇰 香港自动`[]🇺🇸 美国自动`[]🇯🇵 日本自动`[]🇸🇬 新加坡自动`[]🇼🇸 台湾自动`[]🇰🇷 韩国自动`[]🇬🇧 英国自动`[]🌐 手动选择`[]♻️ 自动选择`[]🎯 全球直连
+custom_proxy_group=📹 YouTube`select`[]🇸🇬 新加坡自动`[]🇭🇰 香港自动`[]🇺🇸 美国自动`[]🇯🇵 日本自动`[]🇼🇸 台湾自动`[]🇰🇷 韩国自动`[]🇬🇧 英国自动`[]🌐 手动选择`[]♻️ 自动选择
+custom_proxy_group=🎥 Netflix`select`[]🇸🇬 新加坡自动`[]🇭🇰 香港自动`[]🇺🇸 美国自动`[]🇯🇵 日本自动`[]🇼🇸 台湾自动`[]🇰🇷 韩国自动`[]🇬🇧 英国自动`[]🌐 手动选择`[]♻️ 自动选择
+custom_proxy_group=🎥 DisneyPlus`select`[]🇸🇬 新加坡自动`[]🇭🇰 香港自动`[]🇺🇸 美国自动`[]🇯🇵 日本自动`[]🇼🇸 台湾自动`[]🇰🇷 韩国自动`[]🇬🇧 英国自动`[]🌐 手动选择`[]♻️ 自动选择
+custom_proxy_group=🎥 HBO`select`[]🇸🇬 新加坡自动`[]🇭🇰 香港自动`[]🇺🇸 美国自动`[]🇯🇵 日本自动`[]🇼🇸 台湾自动`[]🇰🇷 韩国自动`[]🇬🇧 英国自动`[]🌐 手动选择`[]♻️ 自动选择`[]🎯 全球直连
+custom_proxy_group=🎥 PrimeVideo`select`[]🇸🇬 新加坡自动`[]🇭🇰 香港自动`[]🇺🇸 美国自动`[]🇯🇵 日本自动`[]🇼🇸 台湾自动`[]🇰🇷 韩国自动`[]🇬🇧 英国自动`[]🌐 手动选择`[]♻️ 自动选择`[]🎯 全球直连
+custom_proxy_group=🎥 AppleTV+`select`[]🇸🇬 新加坡自动`[]🇭🇰 香港自动`[]🇺🇸 美国自动`[]🇯🇵 日本自动`[]🇼🇸 台湾自动`[]🇰🇷 韩国自动`[]🇬🇧 英国自动`[]🌐 手动选择`[]♻️ 自动选择`[]🎯 全球直连
+custom_proxy_group=🎥 Emby`select`[]🇭🇰 香港自动`[]🇺🇸 美国自动`[]🇯🇵 日本自动`[]🇸🇬 新加坡自动`[]🇼🇸 台湾自动`[]🇰🇷 韩国自动`[]🇬🇧 英国自动`[]🌐 手动选择`[]♻️ 自动选择`[]🎯 全球直连
+custom_proxy_group=🎻 Spotify`select`[]🇭🇰 香港自动`[]🇺🇸 美国自动`[]🇯🇵 日本自动`[]🇸🇬 新加坡自动`[]🇼🇸 台湾自动`[]🇰🇷 韩国自动`[]🇬🇧 英国自动`[]🌐 手动选择`[]♻️ 自动选择`[]🎯 全球直连
+custom_proxy_group=📺 Bahamut`select`[]🇼🇸 台湾自动`[]🌐 手动选择`[]🎯 全球直连
+custom_proxy_group=🌎 国外媒体`select`[]🇸🇬 新加坡自动`[]🇭🇰 香港自动`[]🇺🇸 美国自动`[]🇯🇵 日本自动`[]🇼🇸 台湾自动`[]🇰🇷 韩国自动`[]🇬🇧 英国自动`[]🌐 手动选择`[]♻️ 自动选择`[]🎯 全球直连
+custom_proxy_group=🛒 国外电商`select`[]🇭🇰 香港自动`[]🇺🇸 美国自动`[]🇯🇵 日本自动`[]🇸🇬 新加坡自动`[]🇼🇸 台湾自动`[]🇰🇷 韩国自动`[]🇬🇧 英国自动`[]🌐 手动选择`[]♻️ 自动选择`[]🎯 全球直连
+custom_proxy_group=📢 谷歌FCM`select`[]🇭🇰 香港自动`[]🇺🇸 美国自动`[]🇯🇵 日本自动`[]🇸🇬 新加坡自动`[]🇼🇸 台湾自动`[]🇰🇷 韩国自动`[]🇬🇧 英国自动`[]🌐 手动选择`[]♻️ 自动选择`[]🎯 全球直连
+custom_proxy_group=🇬 谷歌服务`select`[]🇭🇰 香港自动`[]🇺🇸 美国自动`[]🇯🇵 日本自动`[]🇸🇬 新加坡自动`[]🇼🇸 台湾自动`[]🇰🇷 韩国自动`[]🇬🇧 英国自动`[]🌐 手动选择`[]♻️ 自动选择`[]🎯 全球直连
+custom_proxy_group=🍎 苹果服务`select`[]🎯 全球直连`[]🇭🇰 香港自动`[]🇺🇸 美国自动`[]🇯🇵 日本自动`[]🇸🇬 新加坡自动`[]🇼🇸 台湾自动`[]🇰🇷 韩国自动`[]🇬🇧 英国自动`[]🌐 手动选择`[]♻️ 自动选择
+custom_proxy_group=Ⓜ️ 微软服务`select`[]🎯 全球直连`[]🇭🇰 香港自动`[]🇺🇸 美国自动`[]🇯🇵 日本自动`[]🇸🇬 新加坡自动`[]🇼🇸 台湾自动`[]🇰🇷 韩国自动`[]🇬🇧 英国自动`[]🌐 手动选择`[]♻️ 自动选择
+custom_proxy_group=🎮 Steam`select`[]🎯 全球直连`[]🇭🇰 香港自动`[]🇺🇸 美国自动`[]🇯🇵 日本自动`[]🇸🇬 新加坡自动`[]🇼🇸 台湾自动`[]🇰🇷 韩国自动`[]🇬🇧 英国自动`[]🌐 手动选择`[]♻️ 自动选择
+custom_proxy_group=🚀 测速工具`select`[]🎯 全球直连`[]🇭🇰 香港自动`[]🇺🇸 美国自动`[]🇯🇵 日本自动`[]🇸🇬 新加坡自动`[]🇼🇸 台湾自动`[]🇰🇷 韩国自动`[]🇬🇧 英国自动`[]🌐 手动选择`[]♻️ 自动选择
+custom_proxy_group=🐟 漏网之鱼`select`[]🇭🇰 香港自动`[]🇺🇸 美国自动`[]🇯🇵 日本自动`[]🇸🇬 新加坡自动`[]🇼🇸 台湾自动`[]🇰🇷 韩国自动`[]🇬🇧 英国自动`[]🌐 手动选择`[]♻️ 自动选择`[]🎯 全球直连
+custom_proxy_group=🔀 非标端口`select`[]🐟 漏网之鱼`[]🎯 全球直连
+custom_proxy_group=🇭🇰 香港自动`url-test`(?=.*(港|(?i)HK|(?i)Hong Kong|(?i)HongKong|深港))^((?!(家宽|测试)).)*$`https://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇼🇸 台湾自动`url-test`(?=.*(台|新北|彰化|(?i)TW|(?i)Taiwan|(?i)Tai wan))^((?!(家宽|测试)).)*$`https://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇯🇵 日本自动`url-test`(?=.*(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|(?i)JP|(?i)Japan|🇯🇵))^((?!(家宽|测试)).)*$`https://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇸🇬 新加坡自动`url-test`(?=.*(新加坡|坡|狮城|(?i)SG|(?i)Singapore))^((?!(家宽|测试)).)*$`https://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇰🇷 韩国自动`url-test`(KR|Korea|KOR|首尔|韩|韓)`https://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇺🇸 美国自动`url-test`(?=.*(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|(?i)US|(?i)United States|(?i)UnitedStates))^((?!(家宽|测试)).)*$`https://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇬🇧 英国自动`url-test`(英国|Britain|United Kingdom|England|伦敦)`https://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=♻️ 自动选择`url-test`^(?!直连$)((?!(家宽|测试|套餐|剩余)).)*$`https://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🌐 手动选择`select`^((?!(套餐|剩余)).)*$
 custom_proxy_group=🎯 全球直连`select`[]DIRECT
-custom_proxy_group=🐟 遵循规则`select`[]🐟 漏网之鱼
 ;设置分组标志位
 
 ;下方参数请勿修改
