--- a/cfg/Custom_Clash.ini
+++ b/cfg/Custom_Clash.ini
@@ -10,8 +10,8 @@ ruleset=🎯 全球直连,[]GEOIP,private,no-resolve
 ruleset=🎯 全球直连,clash-domain:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Direct_Domain.yaml,28800
 ruleset=🎯 全球直连,clash-classic:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Direct_Classical_IP.yaml,28800
 ;本项目收录的代理规则
-ruleset=🌐 手动选择,clash-domain:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Proxy_Domain.yaml,28800
-ruleset=🌐 手动选择,clash-classic:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Proxy_Classical_IP.yaml,28800
+ruleset=🚀 默认代理,clash-domain:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Proxy_Domain.yaml,28800
+ruleset=🚀 默认代理,clash-classic:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Proxy_Classical_IP.yaml,28800
 ;谷歌在国内可用的域名直连
 ruleset=🎯 全球直连,[]GEOSITE,google-cn
 ;国内游戏域名直连
@@ -25,37 +25,22 @@ ruleset=🎯 全球直连,[]GEOSITE,category-public-tracker
 ;即时通讯包括了 Telegram/WhatsApp/Line 等海外主流即时通讯软件域名
 ruleset=🚀 默认代理,[]GEOSITE,category-communication
 ;社交媒体包括了 Twitter(X)/Facebook/Instagram 等海外主流社交媒体
-ruleset=🌐 社交媒体,[]GEOSITE,category-social-media-!cn
+ruleset=🚀 默认代理,[]GEOSITE,category-social-media-!cn
 ruleset=🤖 ChatGPT,[]GEOSITE,openai
-ruleset=🤖 Copilot,[]GEOSITE,bing
+ruleset=🔍 bing,[]GEOSITE,bing
 ruleset=🤖 AI服务,[]GEOSITE,category-ai-!cn
 ruleset=🚀 GitHub,[]GEOSITE,github
 ;测速工具包括 SpeedTest 等主流测速工具域名
-ruleset=🚀 测速工具,[]GEOSITE,category-speedtest
+ruleset=🚀 测速网站,[]GEOSITE,category-speedtest
+ruleset=🎮 Epic,[]GEOSITE,epicgames
+ruleset=🎮 Epic,[]GEOSITE,epicbrowser
 ruleset=🎮 Steam,[]GEOSITE,steam
-ruleset=📹 YouTube,[]GEOSITE,youtube
-ruleset=🎥 AppleTV+,[]GEOSITE,apple-tvplus
-ruleset=🍎 苹果服务,[]GEOSITE,apple
+ruleset=🍎 Apple,[]GEOSITE,apple
 ruleset=Ⓜ️ 微软服务,[]GEOSITE,microsoft
-ruleset=📢 谷歌FCM,[]GEOSITE,googlefcm
-ruleset=🇬 谷歌服务,[]GEOSITE,google
 ruleset=🎶 TikTok,[]GEOSITE,tiktok
 ruleset=🎥 Netflix,[]GEOSITE,netflix
-ruleset=🎥 DisneyPlus,[]GEOSITE,disney
-ruleset=🎥 HBO,[]GEOSITE,hbo
-ruleset=🎥 PrimeVideo,[]GEOSITE,primevideo
-;Emby 包括主流 Emby 服务相关域名
-ruleset=🎥 Emby,[]GEOSITE,category-emby
-ruleset=🎻 Spotify,[]GEOSITE,spotify
-ruleset=📺 Bahamut,[]GEOSITE,bahamut
 ruleset=🎯 全球直连,[]GEOSITE,category-games
-ruleset=🌎 国外媒体,[]GEOSITE,category-entertainment
-ruleset=🛒 国外电商,[]GEOSITE,category-ecommerce
-ruleset=🌐 手动选择,[]GEOSITE,gfw
-ruleset=🚀 默认代理,[]GEOIP,telegram,no-resolve
-ruleset=🌐 社交媒体,[]GEOIP,twitter,no-resolve
-ruleset=🌐 社交媒体,[]GEOIP,facebook,no-resolve
-ruleset=🇬 谷歌服务,[]GEOIP,google,no-resolve
+ruleset=🚀 默认代理,[]GEOSITE,gfw
 ruleset=🎥 Netflix,[]GEOIP,netflix,no-resolve
 ;由于 OpenClash 使用的大陆白名单收录不全，此处留有 geosite:cn 作为国内域名兜底
 ruleset=🎯 全球直连,[]GEOSITE,cn
@@ -63,6 +48,7 @@ ruleset=🎯 全球直连,[]GEOSITE,cn
 ruleset=🎯 全球直连,[]GEOIP,cn,no-resolve
 ;以上兜底规则会根据实际情况随时取消
 ;PT/BT 优化开启会使 80/443 以外端口的流量直连
+ruleset=🚀 默认代理,[]GEOSITE,geolocation-!cn
 ruleset=🔀 非标端口,clash-classic:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Port_Direct.yaml,28800
 ;国内冷门域名会命中漏网之鱼，如影响使用，请设置漏网之鱼直连
 ;漏网之鱼直连时，无法通过 DNS 泄露测试，但是并不存在泄露
@@ -71,31 +57,19 @@ ruleset=🐟 漏网之鱼,[]FINAL
 
 ;设置节点分组标志位
 ;节点地区分组参考本项目推荐机场而设立
-custom_proxy_group=🚀 默认代理`select`[]🇭🇰 香港自动`[]🇺🇸 美国自动`[]🇯🇵 日本自动`[]🇸🇬 新加坡自动`[]🇼🇸 台湾自动`[]🇰🇷 韩国自动`[]🇬🇧 英国自动`[]🌐 手动选择`[]♻️ 自动选择`[]🎯 全球直连
-custom_proxy_group=🌐 社交媒体`select`[]🇭🇰 香港自动`[]🇺🇸 美国自动`[]🇯🇵 日本自动`[]🇸🇬 新加坡自动`[]🇼🇸 台湾自动`[]🇰🇷 韩国自动`[]🇬🇧 英国自动`[]🌐 手动选择`[]♻️ 自动选择
-custom_proxy_group=🚀 GitHub`select`[]🇭🇰 香港自动`[]🇺🇸 美国自动`[]🇯🇵 日本自动`[]🇸🇬 新加坡自动`[]🇼🇸 台湾自动`[]🇰🇷 韩国自动`[]🇬🇧 英国自动`[]🌐 手动选择`[]♻️ 自动选择`[]🎯 全球直连
-custom_proxy_group=🤖 ChatGPT`select`[]🇭🇰 香港自动`[]🇺🇸 美国自动`[]🇯🇵 日本自动`[]🇸🇬 新加坡自动`[]🇼🇸 台湾自动`[]🇰🇷 韩国自动`[]🇬🇧 英国自动`[]🌐 手动选择`[]♻️ 自动选择
-custom_proxy_group=🤖 Copilot`select`[]🇭🇰 香港自动`[]🇺🇸 美国自动`[]🇯🇵 日本自动`[]🇸🇬 新加坡自动`[]🇼🇸 台湾自动`[]🇰🇷 韩国自动`[]🇬🇧 英国自动`[]🌐 手动选择`[]♻️ 自动选择`[]🎯 全球直连
-custom_proxy_group=🤖 AI服务`select`[]🇭🇰 香港自动`[]🇺🇸 美国自动`[]🇯🇵 日本自动`[]🇸🇬 新加坡自动`[]🇼🇸 台湾自动`[]🇰🇷 韩国自动`[]🇬🇧 英国自动`[]🌐 手动选择`[]♻️ 自动选择
-custom_proxy_group=🎶 TikTok`select`[]🇭🇰 香港自动`[]🇺🇸 美国自动`[]🇯🇵 日本自动`[]🇸🇬 新加坡自动`[]🇼🇸 台湾自动`[]🇰🇷 韩国自动`[]🇬🇧 英国自动`[]🌐 手动选择`[]♻️ 自动选择`[]🎯 全球直连
-custom_proxy_group=📹 YouTube`select`[]🇸🇬 新加坡自动`[]🇭🇰 香港自动`[]🇺🇸 美国自动`[]🇯🇵 日本自动`[]🇼🇸 台湾自动`[]🇰🇷 韩国自动`[]🇬🇧 英国自动`[]🌐 手动选择`[]♻️ 自动选择
-custom_proxy_group=🎥 Netflix`select`[]🇸🇬 新加坡自动`[]🇭🇰 香港自动`[]🇺🇸 美国自动`[]🇯🇵 日本自动`[]🇼🇸 台湾自动`[]🇰🇷 韩国自动`[]🇬🇧 英国自动`[]🌐 手动选择`[]♻️ 自动选择
-custom_proxy_group=🎥 DisneyPlus`select`[]🇸🇬 新加坡自动`[]🇭🇰 香港自动`[]🇺🇸 美国自动`[]🇯🇵 日本自动`[]🇼🇸 台湾自动`[]🇰🇷 韩国自动`[]🇬🇧 英国自动`[]🌐 手动选择`[]♻️ 自动选择
-custom_proxy_group=🎥 HBO`select`[]🇸🇬 新加坡自动`[]🇭🇰 香港自动`[]🇺🇸 美国自动`[]🇯🇵 日本自动`[]🇼🇸 台湾自动`[]🇰🇷 韩国自动`[]🇬🇧 英国自动`[]🌐 手动选择`[]♻️ 自动选择`[]🎯 全球直连
-custom_proxy_group=🎥 PrimeVideo`select`[]🇸🇬 新加坡自动`[]🇭🇰 香港自动`[]🇺🇸 美国自动`[]🇯🇵 日本自动`[]🇼🇸 台湾自动`[]🇰🇷 韩国自动`[]🇬🇧 英国自动`[]🌐 手动选择`[]♻️ 自动选择`[]🎯 全球直连
-custom_proxy_group=🎥 AppleTV+`select`[]🇸🇬 新加坡自动`[]🇭🇰 香港自动`[]🇺🇸 美国自动`[]🇯🇵 日本自动`[]🇼🇸 台湾自动`[]🇰🇷 韩国自动`[]🇬🇧 英国自动`[]🌐 手动选择`[]♻️ 自动选择`[]🎯 全球直连
-custom_proxy_group=🎥 Emby`select`[]🇭🇰 香港自动`[]🇺🇸 美国自动`[]🇯🇵 日本自动`[]🇸🇬 新加坡自动`[]🇼🇸 台湾自动`[]🇰🇷 韩国自动`[]🇬🇧 英国自动`[]🌐 手动选择`[]♻️ 自动选择`[]🎯 全球直连
-custom_proxy_group=🎻 Spotify`select`[]🇭🇰 香港自动`[]🇺🇸 美国自动`[]🇯🇵 日本自动`[]🇸🇬 新加坡自动`[]🇼🇸 台湾自动`[]🇰🇷 韩国自动`[]🇬🇧 英国自动`[]🌐 手动选择`[]♻️ 自动选择`[]🎯 全球直连
-custom_proxy_group=📺 Bahamut`select`[]🇼🇸 台湾自动`[]🌐 手动选择`[]🎯 全球直连
-custom_proxy_group=🌎 国外媒体`select`[]🇸🇬 新加坡自动`[]🇭🇰 香港自动`[]🇺🇸 美国自动`[]🇯🇵 日本自动`[]🇼🇸 台湾自动`[]🇰🇷 韩国自动`[]🇬🇧 英国自动`[]🌐 手动选择`[]♻️ 自动选择`[]🎯 全球直连
-custom_proxy_group=🛒 国外电商`select`[]🇭🇰 香港自动`[]🇺🇸 美国自动`[]🇯🇵 日本自动`[]🇸🇬 新加坡自动`[]🇼🇸 台湾自动`[]🇰🇷 韩国自动`[]🇬🇧 英国自动`[]🌐 手动选择`[]♻️ 自动选择`[]🎯 全球直连
-custom_proxy_group=📢 谷歌FCM`select`[]🇭🇰 香港自动`[]🇺🇸 美国自动`[]🇯🇵 日本自动`[]🇸🇬 新加坡自动`[]🇼🇸 台湾自动`[]🇰🇷 韩国自动`[]🇬🇧 英国自动`[]🌐 手动选择`[]♻️ 自动选择`[]🎯 全球直连
-custom_proxy_group=🇬 谷歌服务`select`[]🇭🇰 香港自动`[]🇺🇸 美国自动`[]🇯🇵 日本自动`[]🇸🇬 新加坡自动`[]🇼🇸 台湾自动`[]🇰🇷 韩国自动`[]🇬🇧 英国自动`[]🌐 手动选择`[]♻️ 自动选择`[]🎯 全球直连
-custom_proxy_group=🍎 苹果服务`select`[]🎯 全球直连`[]🇭🇰 香港自动`[]🇺🇸 美国自动`[]🇯🇵 日本自动`[]🇸🇬 新加坡自动`[]🇼🇸 台湾自动`[]🇰🇷 韩国自动`[]🇬🇧 英国自动`[]🌐 手动选择`[]♻️ 自动选择
-custom_proxy_group=Ⓜ️ 微软服务`select`[]🎯 全球直连`[]🇭🇰 香港自动`[]🇺🇸 美国自动`[]🇯🇵 日本自动`[]🇸🇬 新加坡自动`[]🇼🇸 台湾自动`[]🇰🇷 韩国自动`[]🇬🇧 英国自动`[]🌐 手动选择`[]♻️ 自动选择
-custom_proxy_group=🎮 Steam`select`[]🎯 全球直连`[]🇭🇰 香港自动`[]🇺🇸 美国自动`[]🇯🇵 日本自动`[]🇸🇬 新加坡自动`[]🇼🇸 台湾自动`[]🇰🇷 韩国自动`[]🇬🇧 英国自动`[]🌐 手动选择`[]♻️ 自动选择
-custom_proxy_group=🚀 测速工具`select`[]🎯 全球直连`[]🇭🇰 香港自动`[]🇺🇸 美国自动`[]🇯🇵 日本自动`[]🇸🇬 新加坡自动`[]🇼🇸 台湾自动`[]🇰🇷 韩国自动`[]🇬🇧 英国自动`[]🌐 手动选择`[]♻️ 自动选择
-custom_proxy_group=🐟 漏网之鱼`select`[]🇭🇰 香港自动`[]🇺🇸 美国自动`[]🇯🇵 日本自动`[]🇸🇬 新加坡自动`[]🇼🇸 台湾自动`[]🇰🇷 韩国自动`[]🇬🇧 英国自动`[]🌐 手动选择`[]♻️ 自动选择`[]🎯 全球直连
+custom_proxy_group=🚀 默认代理`select`[]🇭🇰 香港自动`[]🇺🇸 美国自动`[]🇯🇵 日本自动`[]🇸🇬 新加坡自动`[]🇼🇸 台湾自动`[]🇰🇷 韩国自动`[]🇬🇧 英国自动`[]♻️ 自动选择`[]🌐 手动选择`[]🎯 全球直连
+custom_proxy_group=🚀 GitHub`select`[]🚀 默认代理`[]🇭🇰 香港自动`[]🇺🇸 美国自动`[]🇯🇵 日本自动`[]🇸🇬 新加坡自动`[]🇼🇸 台湾自动`[]🇰🇷 韩国自动`[]🇬🇧 英国自动`[]♻️ 自动选择`[]🌐 手动选择`[]🎯 全球直连
+custom_proxy_group=🤖 ChatGPT`select`[]🚀 默认代理`[]🇭🇰 香港自动`[]🇺🇸 美国自动`[]🇯🇵 日本自动`[]🇸🇬 新加坡自动`[]🇼🇸 台湾自动`[]🇰🇷 韩国自动`[]🇬🇧 英国自动`[]♻️ 自动选择`[]🌐 手动选择
+custom_proxy_group=🔍 bing`select`[]🎯 全球直连`[]🚀 默认代理`[]🇭🇰 香港自动`[]🇺🇸 美国自动`[]🇯🇵 日本自动`[]🇸🇬 新加坡自动`[]🇼🇸 台湾自动`[]🇰🇷 韩国自动`[]🇬🇧 英国自动`[]♻️ 自动选择`[]🌐 手动选择
+custom_proxy_group=🤖 AI服务`select`[]🚀 默认代理`[]🇭🇰 香港自动`[]🇺🇸 美国自动`[]🇯🇵 日本自动`[]🇸🇬 新加坡自动`[]🇼🇸 台湾自动`[]🇰🇷 韩国自动`[]🇬🇧 英国自动`[]♻️ 自动选择`[]🌐 手动选择
+custom_proxy_group=🎶 TikTok`select`[]🚀 默认代理`[]🇭🇰 香港自动`[]🇺🇸 美国自动`[]🇯🇵 日本自动`[]🇸🇬 新加坡自动`[]🇼🇸 台湾自动`[]🇰🇷 韩国自动`[]🇬🇧 英国自动`[]♻️ 自动选择`[]🌐 手动选择`[]🎯 全球直连
+custom_proxy_group=🎥 Netflix`select`[]🚀 默认代理`[]🇸🇬 新加坡自动`[]🇭🇰 香港自动`[]🇺🇸 美国自动`[]🇯🇵 日本自动`[]🇼🇸 台湾自动`[]🇰🇷 韩国自动`[]🇬🇧 英国自动`[]♻️ 自动选择`[]🌐 手动选择
+custom_proxy_group=🍎 Apple`select`[]🎯 全球直连`[]🇭🇰 香港自动`[]🇺🇸 美国自动`[]🇯🇵 日本自动`[]🇸🇬 新加坡自动`[]🇼🇸 台湾自动`[]🇰🇷 韩国自动`[]🇬🇧 英国自动`[]♻️ 自动选择`[]🌐 手动选择`[]🚀 默认代理
+custom_proxy_group=Ⓜ️ 微软服务`select`[]🎯 全球直连`[]🇭🇰 香港自动`[]🇺🇸 美国自动`[]🇯🇵 日本自动`[]🇸🇬 新加坡自动`[]🇼🇸 台湾自动`[]🇰🇷 韩国自动`[]🇬🇧 英国自动`[]♻️ 自动选择`[]🌐 手动选择`[]🚀 默认代理
+custom_proxy_group=🎮 Steam`select`[]🚀 默认代理`[]🎯 全球直连`[]🇭🇰 香港自动`[]🇺🇸 美国自动`[]🇯🇵 日本自动`[]🇸🇬 新加坡自动`[]🇼🇸 台湾自动`[]🇰🇷 韩国自动`[]🇬🇧 英国自动`[]♻️ 自动选择`[]🌐 手动选择
+custom_proxy_group=🎮 Epic`select`[]🎯 全球直连`[]🇭🇰 香港自动`[]🇺🇸 美国自动`[]🇯🇵 日本自动`[]🇸🇬 新加坡自动`[]🇼🇸 台湾自动`[]🇰🇷 韩国自动`[]🇬🇧 英国自动`[]♻️ 自动选择`[]🚀 默认代理`[]🌐 手动选择
+custom_proxy_group=🚀 测速网站`select`[]🎯 全球直连`[]🚀 默认代理`[]🇭🇰 香港自动`[]🇺🇸 美国自动`[]🇯🇵 日本自动`[]🇸🇬 新加坡自动`[]🇼🇸 台湾自动`[]🇰🇷 韩国自动`[]🇬🇧 英国自动`[]♻️ 自动选择`[]🌐 手动选择
+custom_proxy_group=🐟 漏网之鱼`select`[]🚀 默认代理`[]🇭🇰 香港自动`[]🇺🇸 美国自动`[]🇯🇵 日本自动`[]🇸🇬 新加坡自动`[]🇼🇸 台湾自动`[]🇰🇷 韩国自动`[]🇬🇧 英国自动`[]♻️ 自动选择`[]🌐 手动选择`[]🎯 全球直连
 custom_proxy_group=🔀 非标端口`select`[]🐟 漏网之鱼`[]🎯 全球直连
 custom_proxy_group=🇭🇰 香港自动`url-test`(?=.*(港|(?i)HK|(?i)Hong Kong|(?i)HongKong|深港))^((?!(家宽|测试)).)*$`https://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇼🇸 台湾自动`url-test`(?=.*(台|新北|彰化|(?i)TW|(?i)Taiwan|(?i)Tai wan))^((?!(家宽|测试)).)*$`https://www.gstatic.com/generate_204`300,,50
