Update rulesets and custom proxy groups in config

--- a/cfg/Custom_Clash.ini
+++ b/cfg/Custom_Clash.ini
@@ -48,6 +48,7 @@ ruleset=🎯 全球直连,[]GEOSITE,cn
 ruleset=🎯 全球直连,[]GEOIP,cn,no-resolve
 ;以上兜底规则会根据实际情况随时取消
 ;PT/BT 优化开启会使 80/443 以外端口的流量直连
+ruleset=🚀 默认代理,[]GEOSITE,geolocation-!cn
 ruleset=🔀 非标端口,clash-classic:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Port_Direct.yaml,28800
 ;国内冷门域名会命中漏网之鱼，如影响使用，请设置漏网之鱼直连
 ;漏网之鱼直连时，无法通过 DNS 泄露测试，但是并不存在泄露
@@ -70,6 +71,7 @@ custom_proxy_group=🎮 Epic`select`[]🎯 全球直连`[]🇭🇰 香港自动`
 custom_proxy_group=🚀 测速网站`select`[]🎯 全球直连`[]🚀 默认代理`[]🇭🇰 香港自动`[]🇺🇸 美国自动`[]🇯🇵 日本自动`[]🇸🇬 新加坡自动`[]🇼🇸 台湾自动`[]🇰🇷 韩国自动`[]🇬🇧 英国自动`[]♻️ 自动选择`[]🌐 手动选择
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 默认代理`[]🇭🇰 香港自动`[]🇺🇸 美国自动`[]🇯🇵 日本自动`[]🇸🇬 新加坡自动`[]🇼🇸 台湾自动`[]🇰🇷 韩国自动`[]🇬🇧 英国自动`[]♻️ 自动选择`[]🌐 手动选择`[]🎯 全球直连
 custom_proxy_group=🔀 非标端口`select`[]🐟 漏网之鱼`[]🎯 全球直连
+custom_proxy_group=ChatGPT节点`url-test`(GPT|ChatGPT|chatgpt)`https://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇭🇰 香港自动`url-test`(?=.*(港|(?i)HK|(?i)Hong Kong|(?i)HongKong|深港))^((?!(家宽|测试)).)*$`https://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇼🇸 台湾自动`url-test`(?=.*(台|新北|彰化|(?i)TW|(?i)Taiwan|(?i)Tai wan))^((?!(家宽|测试)).)*$`https://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇯🇵 日本自动`url-test`(?=.*(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|(?i)JP|(?i)Japan|🇯🇵))^((?!(家宽|测试)).)*$`https://www.gstatic.com/generate_204`300,,50
