Update ChatGPT proxy group configuration

--- a/cfg/Custom_Clash.ini
+++ b/cfg/Custom_Clash.ini
@@ -59,7 +59,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;节点地区分组参考本项目推荐机场而设立
 custom_proxy_group=🚀 默认代理`select`[]🇭🇰 香港自动`[]🇺🇸 美国自动`[]🇯🇵 日本自动`[]🇸🇬 新加坡自动`[]🇼🇸 台湾自动`[]🇰🇷 韩国自动`[]🇬🇧 英国自动`[]♻️ 自动选择`[]🌐 手动选择`[]🎯 全球直连
 custom_proxy_group=🚀 GitHub`select`[]🚀 默认代理`[]🇭🇰 香港自动`[]🇺🇸 美国自动`[]🇯🇵 日本自动`[]🇸🇬 新加坡自动`[]🇼🇸 台湾自动`[]🇰🇷 韩国自动`[]🇬🇧 英国自动`[]♻️ 自动选择`[]🌐 手动选择`[]🎯 全球直连
-custom_proxy_group=🤖 ChatGPT`select`[]🚀 默认代理`[]🇭🇰 香港自动`[]🇺🇸 美国自动`[]🇯🇵 日本自动`[]🇸🇬 新加坡自动`[]🇼🇸 台湾自动`[]🇰🇷 韩国自动`[]🇬🇧 英国自动`[]♻️ 自动选择`[]🌐 手动选择
+custom_proxy_group=🤖 ChatGPT`select`[]ChatGPT节点`[]🚀 默认代理`[]🇭🇰 香港自动`[]🇺🇸 美国自动`[]🇯🇵 日本自动`[]🇸🇬 新加坡自动`[]🇼🇸 台湾自动`[]🇰🇷 韩国自动`[]🇬🇧 英国自动`[]♻️ 自动选择`[]🌐 手动选择
 custom_proxy_group=🔍 bing`select`[]🎯 全球直连`[]🚀 默认代理`[]🇭🇰 香港自动`[]🇺🇸 美国自动`[]🇯🇵 日本自动`[]🇸🇬 新加坡自动`[]🇼🇸 台湾自动`[]🇰🇷 韩国自动`[]🇬🇧 英国自动`[]♻️ 自动选择`[]🌐 手动选择
 custom_proxy_group=🤖 AI服务`select`[]🚀 默认代理`[]🇭🇰 香港自动`[]🇺🇸 美国自动`[]🇯🇵 日本自动`[]🇸🇬 新加坡自动`[]🇼🇸 台湾自动`[]🇰🇷 韩国自动`[]🇬🇧 英国自动`[]♻️ 自动选择`[]🌐 手动选择
 custom_proxy_group=🎶 TikTok`select`[]🚀 默认代理`[]🇭🇰 香港自动`[]🇺🇸 美国自动`[]🇯🇵 日本自动`[]🇸🇬 新加坡自动`[]🇼🇸 台湾自动`[]🇰🇷 韩国自动`[]🇬🇧 英国自动`[]♻️ 自动选择`[]🌐 手动选择`[]🎯 全球直连
